# axle

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DBG  DBG.sublime-project  Doxyfile  Makefile  README.md  axle_hmap.c  axle_hmap.h  axle_itc.c  axle_itc.h  build.sh  cmake_install.cmake  compile_commands.json  itc_example  main.c  run.sh  stb_ds.h  test.c  time.sh
.cache/clangd/index/: ConsoleLoggerHandler.h.47B6D407BCD39AFC.idx  DebugLogger.h.B903D31BD7E169FD.idx  FileLoggerHandler.h.027055E9475A2B09.idx  LoggerHandler.h.5E12E19EBD95C3A5.idx  icr_debug.cpp.4CCFFD970B513DC4.idx  main.cpp.D55CC98DBC487840.idx  mem_defer.cpp.F63EA2CA3C1E0F20.idx  mem_defer.h.F2646B17362B652F.idx
.cmake/api/v1/reply/: cache-v2-220121cf91aaf0ee3652.json  cmakeFiles-v1-cd49c7a92f53d209c4ab.json  codemodel-v2-cb859bf2b79573f15914.json  index-2024-11-09T04-51-38-0629.json  target-DBG-Debug-8fcb1e5298498423f049.json
.github/workflows/: c-cpp.yml
source/: conf.py
src/: Makefile  arena.h  axle  axle_arr.c  axle_arr.h  axle_geo.h  axle_hmap.h  axle_itc.c  axle_itc.h  axle_sched.c  axle_sched.h  axle_typedefs.h  mem_defer.h  test.c  test_itc.c
src/dbg/: icr_assert.h  icr_debug.cpp  xassert.h
src/io/: out.h
src/log/: ConsoleLoggerHandler.h  DebugLogger.h  FileLoggerHandler.h  LoggerHandler.h  RemoteLoggerHandler.h  main.cpp
src/mem/: mem_defer.cpp  mem_defer.h
src/static/: Makefile
